# website-scraper

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
tests/: test_scraper.py  test_website_scraper.py
website_scraper/: file_handler.py  main.py  scraper.py
