[tool.poetry]
name = "website-scraper"
version = "0.1.0"
description = "A basic website scraper"
authors = ["Christophe Bastin <christophe.bastin@posteo.net>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.15.0"
black = "^21.8b0"
flake8 = "^3.9.2"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
website-scraper = "website_scraper.main:main"
